--- a/Resources/Maps/_NF/Shuttles/Scrap/scrap-comet.yml
+++ b/Resources/Maps/_NF/Shuttles/Scrap/scrap-comet.yml
@@ -277,17 +277,13 @@ entities:
           0,3:
             0: 65535
           1,0:
-            0: 4369
-            1: 546
+            0: 4915
           1,1:
-            0: 4369
-            1: 8704
+            0: 13073
           1,2:
-            0: 4369
-            1: 8226
+            0: 12595
           1,3:
-            0: 273
-            1: 4642
+            0: 4915
           -1,0:
             0: 65535
           -1,1:
@@ -295,72 +291,46 @@ entities:
           -1,2:
             0: 65535
           -1,3:
-            0: 61439
-            1: 4096
+            0: 65535
           0,-4:
-            0: 30579
-            1: 2180
+            0: 32759
           0,-3:
-            0: 65527
-            1: 8
+            0: 65535
           0,-2:
             0: 65535
           0,-1:
             0: 65535
           1,-2:
-            1: 17
-            0: 4352
+            0: 4369
           1,-1:
-            0: 4113
-            1: 256
+            0: 4369
           -1,-2:
-            1: 17
-            0: 65518
+            0: 65535
           -1,-1:
-            0: 65279
-            1: 256
+            0: 65535
           -1,-3:
-            1: 274
-            0: 61164
+            0: 61438
           -1,-4:
-            1: 548
-            0: 52424
+            0: 52972
           -1,4:
             0: 3822
           0,4:
             0: 4095
           -1,-5:
-            1: 1152
-            0: 34816
+            0: 35968
           0,-5:
-            1: 1073
-            0: 13056
+            0: 14129
           -2,0:
-            1: 2184
+            0: 2184
           -2,1:
-            1: 34816
+            0: 34816
           -2,2:
-            1: 32904
+            0: 32904
           -2,3:
-            1: 2184
+            0: 2184
           1,-3:
-            1: 272
+            0: 272
         uniqueMixes:
-        - volume: 2500
-          temperature: 293.15
-          moles:
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
         - volume: 2500
           temperature: 293.15
           moles:
@@ -419,17 +389,11 @@ entities:
     - type: Transform
       pos: 3.5,3.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 736
   - uid: 690
     components:
     - type: Transform
       pos: -2.5,3.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 736
 - proto: AmeJar
   entities:
   - uid: 65
@@ -612,25 +576,16 @@ entities:
     - type: Transform
       pos: 4.5,9.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 711
   - uid: 239
     components:
     - type: Transform
       pos: 4.5,10.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 711
   - uid: 240
     components:
     - type: Transform
       pos: 4.5,11.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 711
 - proto: CableApcExtension
   entities:
   - uid: 24
@@ -1041,24 +996,6 @@ entities:
     - type: Transform
       pos: -2.5,6.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.14957
-        moles:
-        - 1.7450964
-        - 6.564886
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
 - proto: DrinkFlaskOld
   entities:
   - uid: 595
@@ -1687,8 +1624,6 @@ entities:
       anchored: True
       pos: 3.5,-3.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: OxygenCanister
   entities:
   - uid: 587
@@ -1697,8 +1632,6 @@ entities:
       anchored: True
       pos: 3.5,-4.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: Paper
   entities:
   - uid: 651
@@ -1812,19 +1745,6 @@ entities:
     - type: Transform
       pos: -1.9694284,0.5056243
       parent: 1
-    - type: Stamp
-      stampedName: Unknown
-- proto: PlushieOrangeFox
-  entities:
-  - uid: 108
-    components:
-    - type: Transform
-      pos: 5.3479433,1.9122041
-      parent: 1
-    missingComponents:
-    - Food
-    - Item
-    - Pullable
 - proto: PortableGeneratorPacmanMachineCircuitboard
   entities:
   - uid: 635
@@ -1941,18 +1861,6 @@ entities:
     - type: Transform
       pos: 1.5,4.5
       parent: 1
-- proto: RandomCargoCorpseSpawner
-  entities:
-  - uid: 10
-    components:
-    - type: Transform
-      pos: 0.5,9.5
-      parent: 1
-  - uid: 18
-    components:
-    - type: Transform
-      pos: -2.5,12.5
-      parent: 1
 - proto: RandomCargoSpawner
   entities:
   - uid: 62
@@ -1996,18 +1904,6 @@ entities:
     components:
     - type: Transform
       pos: 2.5,-3.5
-      parent: 1
-- proto: RandomEngineerCorpseSpawner
-  entities:
-  - uid: 11
-    components:
-    - type: Transform
-      pos: 0.5,-4.5
-      parent: 1
-  - uid: 90
-    components:
-    - type: Transform
-      pos: -2.5,-6.5
       parent: 1
 - proto: ReinforcedGirder
   entities:
@@ -2345,41 +2241,26 @@ entities:
     - type: Transform
       pos: 2.5,3.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 736
   - uid: 732
     components:
     - type: Transform
       pos: 1.5,3.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 736
   - uid: 733
     components:
     - type: Transform
       pos: 0.5,3.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 736
   - uid: 734
     components:
     - type: Transform
       pos: -0.5,3.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 736
   - uid: 735
     components:
     - type: Transform
       pos: -1.5,3.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 736
 - proto: SignalButton
   entities:
   - uid: 711
@@ -2418,7 +2299,7 @@ entities:
         - Pressed: Toggle
         689:
         - Pressed: DoorBolt
-- proto: soda_dispenser
+- proto: SodaDispenser
   entities:
   - uid: 649
     components:
@@ -2436,11 +2317,6 @@ entities:
     components:
     - type: Transform
       pos: 1.1065737,0.64682204
-      parent: 1
-  - uid: 113
-    components:
-    - type: Transform
-      pos: -0.63300973,-0.2600574
       parent: 1
   - uid: 117
     components:
@@ -2534,8 +2410,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: -0.5,-2.5
       parent: 1
-    - type: Physics
-      canCollide: False
 - proto: SuitStorageWallmountCE
   entities:
   - uid: 314
@@ -2544,8 +2418,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: 1.5,-2.5
       parent: 1
-    - type: Physics
-      canCollide: False
 - proto: Table
   entities:
   - uid: 723
@@ -2607,38 +2479,28 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 4.5,-6.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 13
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 4.5,-1.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 14
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -3.5,-1.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 15
     components:
     - type: Transform
       pos: -3.5,15.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 16
     components:
     - type: Transform
       pos: 4.5,15.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
 - proto: UnfinishedMachineFrame
   entities:
   - uid: 75
@@ -2824,7 +2686,7 @@ entities:
     - type: Transform
       pos: 1.5,-2.5
       parent: 1
-- proto: WarpPointNFScrap
+- proto: WarpPoint
   entities:
   - uid: 109
     components:
@@ -2839,8 +2701,6 @@ entities:
       anchored: True
       pos: 3.5,12.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: WeaponCapacitorRecharger
   entities:
   - uid: 645
@@ -2869,8 +2729,6 @@ entities:
       anchored: True
       pos: 3.5,13.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: Wrench
   entities:
   - uid: 725
