--- a/Resources/Maps/_NF/Shuttles/Scrap/scrap-hauler.yml
+++ b/Resources/Maps/_NF/Shuttles/Scrap/scrap-hauler.yml
@@ -1752,24 +1752,6 @@ entities:
     - type: Transform
       pos: 5.5,-0.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.1496
-        moles:
-        - 1.8968438
-        - 7.1357465
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
     - type: ContainerContainer
       containers:
         entity_storage: !type:Container
@@ -1788,24 +1770,6 @@ entities:
     - type: Transform
       pos: -2.5,2.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.1496
-        moles:
-        - 1.8856695
-        - 7.0937095
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
     - type: ContainerContainer
       containers:
         entity_storage: !type:Container
@@ -1838,69 +1802,6 @@ entities:
     - type: Transform
       pos: -2.5,23.5
       parent: 1
-- proto: ClothingOuterCoatBomber
-  entities:
-  - uid: 525
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: ClothingOuterWinterCoatPlaid
-  entities:
-  - uid: 883
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: ClothingShoesBootsSalvage
-  entities:
-  - uid: 885
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: ClothingShoesBootsWinter
-  entities:
-  - uid: 887
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: ClothingShoesBootsWork
-  entities:
-  - uid: 58
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: ClothingUniformJumpsuitTshirtJeans
-  entities:
-  - uid: 129
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: ClothingUniformJumpsuitTshirtJeansGray
-  entities:
-  - uid: 888
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
 - proto: Cobweb1
   entities:
   - uid: 472
@@ -1941,54 +1842,36 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 5.5,9.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 473
   - uid: 124
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 6.5,13.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 473
   - uid: 133
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 5.5,13.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 473
   - uid: 137
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 6.5,9.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 473
   - uid: 138
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 7.5,9.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 473
   - uid: 153
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 8.5,9.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 473
   - uid: 208
     components:
     - type: Transform
@@ -2001,9 +1884,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 7.5,13.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 473
   - uid: 328
     components:
     - type: Transform
@@ -2034,9 +1914,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 8.5,13.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 473
 - proto: CrateEmptySpawner
   entities:
   - uid: 176
@@ -2253,51 +2130,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -0.5,5.5
       parent: 1
-- proto: FlashlightLantern
-  entities:
-  - uid: 886
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: FoodSnackChips
-  entities:
-  - uid: 662
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: FoodSnackChocolate
-  entities:
-  - uid: 789
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: FoodSnackRaisins
-  entities:
-  - uid: 889
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
-- proto: FoodSnackSus
-  entities:
-  - uid: 884
-    components:
-    - type: Transform
-      parent: 64
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
 - proto: GasPassiveVent
   entities:
   - uid: 934
@@ -3148,13 +2980,6 @@ entities:
     - type: Transform
       pos: -2.5,24.5
       parent: 1
-- proto: MedkitAdvancedFilled
-  entities:
-  - uid: 520
-    components:
-    - type: Transform
-      pos: -4.5700297,24.630707
-      parent: 1
 - proto: MedkitFilled
   entities:
   - uid: 773
@@ -3227,10 +3052,6 @@ entities:
     - type: Transform
       pos: 3.5,-1.5
       parent: 1
-    - type: FuelGenerator
-      on: False
-    - type: Physics
-      bodyType: Static
 - proto: PosterLegitAnatomyPoster
   entities:
   - uid: 522
@@ -3468,18 +3289,6 @@ entities:
     - type: Transform
       pos: 1.5,-3.5
       parent: 1
-- proto: RandomCargoCorpseSpawner
-  entities:
-  - uid: 69
-    components:
-    - type: Transform
-      pos: 5.5,12.5
-      parent: 1
-  - uid: 70
-    components:
-    - type: Transform
-      pos: 3.5,8.5
-      parent: 1
 - proto: RandomCargoSpawner
   entities:
   - uid: 175
@@ -3531,27 +3340,6 @@ entities:
     components:
     - type: Transform
       pos: 2.5,28.5
-      parent: 1
-- proto: RandomEngineerCorpseSpawner
-  entities:
-  - uid: 156
-    components:
-    - type: Transform
-      pos: 3.5,0.5
-      parent: 1
-- proto: RandomMedicCorpseSpawner
-  entities:
-  - uid: 63
-    components:
-    - type: Transform
-      pos: -2.5,22.5
-      parent: 1
-- proto: RandomServiceCorpseSpawner
-  entities:
-  - uid: 66
-    components:
-    - type: Transform
-      pos: -3.5,1.5
       parent: 1
 - proto: RandomSpawner
   entities:
@@ -3704,28 +3492,6 @@ entities:
     - type: Transform
       pos: 3.5,5.5
       parent: 1
-- proto: SalvageHumanCorpseSpawner
-  entities:
-  - uid: 65
-    components:
-    - type: Transform
-      pos: 0.5,28.5
-      parent: 1
-  - uid: 119
-    components:
-    - type: Transform
-      pos: -1.5,13.5
-      parent: 1
-  - uid: 131
-    components:
-    - type: Transform
-      pos: -0.5,9.5
-      parent: 1
-  - uid: 132
-    components:
-    - type: Transform
-      pos: 4.5,21.5
-      parent: 1
 - proto: SalvageMaterialCrateSpawner
   entities:
   - uid: 291
@@ -3824,25 +3590,16 @@ entities:
     - type: Transform
       pos: 8.5,9.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 901
   - uid: 234
     components:
     - type: Transform
       pos: 8.5,13.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 901
   - uid: 333
     components:
     - type: Transform
       pos: -6.5,12.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 878
 - proto: ShuttersNormalOpen
   entities:
   - uid: 338
@@ -4232,24 +3989,6 @@ entities:
     - type: Transform
       pos: 4.5,15.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.1496
-        moles:
-        - 1.7459903
-        - 6.568249
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
   - uid: 222
     components:
     - type: Transform
@@ -4347,71 +4086,53 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -5.5,3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 879
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 6.5,19.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 881
     components:
     - type: Transform
       pos: -6.5,25.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 943
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -4.5,-3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 944
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -3.5,-3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 945
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -2.5,-3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 946
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 3.5,-3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 947
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 4.5,-3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 948
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 5.5,-3.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
 - proto: ToiletEmpty
   entities:
   - uid: 550
@@ -4474,13 +4195,6 @@ entities:
     components:
     - type: Transform
       pos: 3.5,15.5
-      parent: 1
-- proto: VendingMachineSustenance
-  entities:
-  - uid: 447
-    components:
-    - type: Transform
-      pos: 1.5,10.5
       parent: 1
 - proto: VendingMachineTankDispenserEVA
   entities:
@@ -5230,7 +4944,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 3.5,6.5
       parent: 1
-- proto: WarpPointNFScrap
+- proto: WarpPoint
   entities:
   - uid: 191
     components:
@@ -5252,15 +4966,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: 3.5,21.5
       parent: 1
-- proto: Wrench
-  entities:
-  - uid: 669
-    components:
-    - type: Transform
-      parent: 454
-    - type: Physics
-      canCollide: False
-    - type: InsideEntityStorage
 - proto: XenoAISpawnerEasy
   entities:
   - uid: 41
