--- a/Resources/Maps/_NF/Shuttles/Scrap/scrap-investigator.yml
+++ b/Resources/Maps/_NF/Shuttles/Scrap/scrap-investigator.yml
@@ -372,32 +372,27 @@ entities:
           0,1:
             0: 4095
           1,1:
-            0: 1911
-            1: 8
+            0: 1919
           2,0:
             0: 65535
           2,1:
-            1: 15
+            0: 15
           3,0:
-            0: 4369
-            1: 238
+            0: 4607
           3,1:
-            1: 1
+            0: 1
           0,-3:
-            1: 4096
+            0: 4096
           0,-2:
-            0: 4369
-            1: 57344
+            0: 61713
           0,-1:
             0: 65535
           1,-2:
-            1: 29764
-            0: 34952
+            0: 64716
           1,-1:
             0: 65535
           1,-3:
-            1: 16384
-            0: 34816
+            0: 51200
           2,-3:
             0: 65280
           2,-2:
@@ -405,58 +400,40 @@ entities:
           2,-1:
             0: 65535
           3,-3:
-            1: 4352
+            0: 4352
           3,-2:
-            1: 4369
-          3,-1:
             0: 4369
-            1: 12000
+          3,-1:
+            0: 16369
           -2,-3:
-            1: 52224
+            0: 52224
           -2,-2:
             0: 52428
           -2,-1:
-            1: 9008
-            0: 52428
+            0: 61436
           -1,-3:
-            1: 65280
+            0: 65280
           -1,-2:
             0: 65535
           -1,-1:
             0: 65535
           -2,0:
-            1: 51
-            0: 52428
+            0: 52479
           -2,1:
-            1: 12
+            0: 12
           -1,0:
             0: 65535
           -1,1:
-            1: 15
+            0: 15
           -3,-1:
-            1: 12272
+            0: 12272
           -3,0:
-            1: 255
+            0: 255
           4,-1:
-            1: 10096
+            0: 10096
           4,0:
-            1: 119
+            0: 119
         uniqueMixes:
-        - volume: 2500
-          temperature: 293.15
-          moles:
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
         - volume: 2500
           temperature: 293.15
           moles:
@@ -1075,9 +1052,6 @@ entities:
     - type: Transform
       pos: 7.5,-7.5
       parent: 2
-    - type: DeviceLinkSink
-      links:
-      - 702
 - proto: BlastDoorOpen
   entities:
   - uid: 88
@@ -1085,25 +1059,16 @@ entities:
     - type: Transform
       pos: 2.5,-3.5
       parent: 2
-    - type: DeviceLinkSink
-      links:
-      - 469
   - uid: 91
     components:
     - type: Transform
       pos: 4.5,-3.5
       parent: 2
-    - type: DeviceLinkSink
-      links:
-      - 469
   - uid: 467
     components:
     - type: Transform
       pos: 3.5,-3.5
       parent: 2
-    - type: DeviceLinkSink
-      links:
-      - 469
 - proto: BoozeDispenser
   entities:
   - uid: 476
@@ -2391,14 +2356,6 @@ entities:
     - type: Transform
       pos: 0.5,0.5
       parent: 2
-    - type: Physics
-      canCollide: False
-    - type: ContainerContainer
-      containers:
-        board: !type:Container
-          ents: []
-        bank-ATM-cashSlot: !type:ContainerSlot {}
-    - type: ItemSlots
 - proto: CrateArtifactContainer
   entities:
   - uid: 671
@@ -2420,13 +2377,6 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -5.5,-1.5
-      parent: 2
-- proto: DonkpocketBoxSpawner
-  entities:
-  - uid: 282
-    components:
-    - type: Transform
-      pos: 7.5,-2.5
       parent: 2
 - proto: DrinkGlass
   entities:
@@ -2988,6 +2938,8 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 6.5,0.5
       parent: 2
+    - type: Fixtures
+      fixtures: {}
 - proto: Lamp
   entities:
   - uid: 105
@@ -3015,7 +2967,6 @@ entities:
   - uid: 125
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
       pos: 9.5,-7.5
       parent: 2
 - proto: MachineFrame
@@ -3066,17 +3017,6 @@ entities:
     - type: Transform
       pos: -2.514917,-4.8300157
       parent: 2
-- proto: PlushieOrangeFox
-  entities:
-  - uid: 83
-    components:
-    - type: Transform
-      pos: -5.5665846,-8.397133
-      parent: 2
-    missingComponents:
-    - Food
-    - Item
-    - Pullable
 - proto: PowerCellRecharger
   entities:
   - uid: 104
@@ -3163,27 +3103,6 @@ entities:
     components:
     - type: Transform
       pos: -2.5,1.5
-      parent: 2
-- proto: RandomEngineerCorpseSpawner
-  entities:
-  - uid: 235
-    components:
-    - type: Transform
-      pos: -2.5,-5.5
-      parent: 2
-- proto: RandomScienceCorpseSpawner
-  entities:
-  - uid: 109
-    components:
-    - type: Transform
-      pos: 9.5,-6.5
-      parent: 2
-- proto: RandomServiceCorpseSpawner
-  entities:
-  - uid: 11
-    components:
-    - type: Transform
-      pos: -4.5,1.5
       parent: 2
 - proto: RandomSpawner
   entities:
@@ -3578,13 +3497,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 0.5,-2.5
       parent: 2
-- proto: SignMinerDock
-  entities:
-  - uid: 480
-    components:
-    - type: Transform
-      pos: 1.5,-3.5
-      parent: 2
 - proto: SignRND
   entities:
   - uid: 256
@@ -3595,6 +3507,11 @@ entities:
       parent: 2
 - proto: SignShipDock
   entities:
+  - uid: 480
+    components:
+    - type: Transform
+      pos: 1.5,-3.5
+      parent: 2
   - uid: 482
     components:
     - type: Transform
@@ -4140,84 +4057,62 @@ entities:
       rot: 3.141592653589793 rad
       pos: 5.5,-4.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 180
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 1.5,-4.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 181
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 12.5,-8.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 182
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -5.5,-9.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 184
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 12.5,-9.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 185
     components:
     - type: Transform
       pos: 11.5,4.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 186
     components:
     - type: Transform
       pos: -3.5,4.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 187
     components:
     - type: Transform
       pos: 10.5,4.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 188
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: 12.5,4.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 189
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: -5.5,4.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 190
     components:
     - type: Transform
       pos: -4.5,4.5
       parent: 2
-    - type: Thruster
-      originalPowerLoad: 1500
 - proto: UnfinishedMachineFrame
   entities:
   - uid: 207
@@ -4443,8 +4338,6 @@ entities:
     - type: Transform
       pos: 3.5,-0.5
       parent: 2
-    - type: WarpPoint
-      location: Разрушенный шаттл "Исследователь"
 - proto: WindoorSecure
   entities:
   - uid: 96
