--- a/Resources/Maps/_NF/Shuttles/Scrap/scrap-sprinter.yml
+++ b/Resources/Maps/_NF/Shuttles/Scrap/scrap-sprinter.yml
@@ -600,8 +600,7 @@ entities:
             0: 64511
             4: 1024
           -2,-3:
-            0: 61120
-            5: 8
+            0: 61128
           -1,-4:
             0: 65216
           -1,-3:
@@ -623,8 +622,7 @@ entities:
             0: 63487
             1: 2048
           1,-3:
-            0: 30512
-            5: 1
+            0: 30513
           1,-2:
             0: 63487
             1: 2048
@@ -643,9 +641,9 @@ entities:
           3,-1:
             0: 4369
           -2,-4:
-            5: 32768
+            0: 32768
           1,-4:
-            5: 4096
+            0: 4096
         uniqueMixes:
         - volume: 2500
           temperature: 293.15
@@ -722,21 +720,6 @@ entities:
           - 0
           - 0
           - 0
-        - volume: 2500
-          temperature: 293.15
-          moles:
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
         chunkSize: 4
     - type: GasTileOverlay
     - type: RadiationGridResistance
@@ -750,8 +733,6 @@ entities:
       anchored: True
       pos: -2.5,7.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: AirlockCargoGlass
   entities:
   - uid: 3
@@ -844,9 +825,6 @@ entities:
     - type: Transform
       pos: -3.5,-2.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 412
 - proto: AirlockMercenaryLocked
   entities:
   - uid: 21
@@ -992,8 +970,6 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -0.5,2.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: BenchSofaCorpMiddle
   entities:
   - uid: 62
@@ -1002,8 +978,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: -2.5,1.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: BenchSofaCorpRight
   entities:
   - uid: 63
@@ -1012,8 +986,6 @@ entities:
       rot: 3.141592653589793 rad
       pos: -1.5,1.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: BlastDoor
   entities:
   - uid: 64
@@ -1021,25 +993,16 @@ entities:
     - type: Transform
       pos: -5.5,-9.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 694
   - uid: 65
     components:
     - type: Transform
       pos: -5.5,-7.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 694
   - uid: 66
     components:
     - type: Transform
       pos: -5.5,-8.5
       parent: 1
-    - type: DeviceLinkSink
-      links:
-      - 694
 - proto: BoozeDispenser
   entities:
   - uid: 67
@@ -2271,6 +2234,7 @@ entities:
   - uid: 151
     components:
     - type: Transform
+      anchored: False
       rot: 1.5707963267948966 rad
       pos: 1.5,5.5
       parent: 1
@@ -2849,8 +2813,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -9.5,-0.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
 - proto: HospitalCurtainsOpen
   entities:
   - uid: 583
@@ -2922,24 +2884,6 @@ entities:
     - type: Transform
       pos: 3.5,-1.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.1496
-        moles:
-        - 1.7459903
-        - 6.568249
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
 - proto: LockerFreezerBase
   entities:
   - uid: 472
@@ -2975,24 +2919,6 @@ entities:
     - type: Transform
       pos: 2.5,-5.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.1496
-        moles:
-        - 1.7459903
-        - 6.568249
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
 - proto: MachineFrame
   entities:
   - uid: 8
@@ -3168,17 +3094,6 @@ entities:
     - type: Transform
       pos: -6.537076,-6.4666386
       parent: 1
-- proto: PlushieOrangeFox
-  entities:
-  - uid: 297
-    components:
-    - type: Transform
-      pos: -10.531555,0.5613451
-      parent: 1
-    missingComponents:
-    - Food
-    - Item
-    - Pullable
 - proto: PottedPlantRandomPlastic
   entities:
   - uid: 606
@@ -3298,13 +3213,6 @@ entities:
     - type: Transform
       pos: 6.5,-2.5
       parent: 1
-- proto: RandomCargoCorpseSpawner
-  entities:
-  - uid: 235
-    components:
-    - type: Transform
-      pos: -4.5,-8.5
-      parent: 1
 - proto: RandomCargoSpawner
   entities:
   - uid: 137
@@ -3323,246 +3231,6 @@ entities:
     components:
     - type: Transform
       pos: 1.5,-1.5
-      parent: 1
-- proto: RandomEngineerCorpseSpawner
-  entities:
-  - uid: 415
-    components:
-    - type: Transform
-      pos: -1.5,6.5
-      parent: 1
-- proto: RandomMedicCorpseSpawner
-  entities:
-  - uid: 32
-    components:
-    - type: Transform
-      pos: 4.5,-8.5
-      parent: 1
-- proto: WallRock
-  entities:
-  - uid: 10
-    components:
-    - type: Transform
-      pos: -6.5,-3.5
-      parent: 1
-  - uid: 13
-    components:
-    - type: Transform
-      pos: -3.5,-4.5
-      parent: 1
-  - uid: 14
-    components:
-    - type: Transform
-      pos: 1.5,-10.5
-      parent: 1
-  - uid: 17
-    components:
-    - type: Transform
-      pos: 3.5,-4.5
-      parent: 1
-  - uid: 23
-    components:
-    - type: Transform
-      pos: 0.5,-9.5
-      parent: 1
-  - uid: 24
-    components:
-    - type: Transform
-      pos: 1.5,-4.5
-      parent: 1
-  - uid: 26
-    components:
-    - type: Transform
-      pos: -0.5,-8.5
-      parent: 1
-  - uid: 27
-    components:
-    - type: Transform
-      pos: -1.5,5.5
-      parent: 1
-  - uid: 40
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -4.5,4.5
-      parent: 1
-  - uid: 43
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 2.5,-3.5
-      parent: 1
-  - uid: 73
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -1.5,-9.5
-      parent: 1
-  - uid: 79
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -0.5,-7.5
-      parent: 1
-  - uid: 84
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.5,-9.5
-      parent: 1
-  - uid: 86
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -1.5,-4.5
-      parent: 1
-  - uid: 87
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -9.5,-4.5
-      parent: 1
-  - uid: 88
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -10.5,-5.5
-      parent: 1
-  - uid: 89
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -3.5,-10.5
-      parent: 1
-  - uid: 90
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -10.5,-3.5
-      parent: 1
-  - uid: 91
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -10.5,-2.5
-      parent: 1
-  - uid: 106
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 0.5,-10.5
-      parent: 1
-  - uid: 107
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.5,-11.5
-      parent: 1
-  - uid: 108
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.5,-5.5
-      parent: 1
-  - uid: 118
-    components:
-    - type: Transform
-      pos: 1.5,9.5
-      parent: 1
-  - uid: 119
-    components:
-    - type: Transform
-      pos: 3.5,9.5
-      parent: 1
-  - uid: 122
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -2.5,6.5
-      parent: 1
-  - uid: 126
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 3.5,-0.5
-      parent: 1
-  - uid: 127
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 4.5,-0.5
-      parent: 1
-  - uid: 128
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 0.5,-4.5
-      parent: 1
-  - uid: 131
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -1.5,-3.5
-      parent: 1
-  - uid: 183
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 0.5,-3.5
-      parent: 1
-  - uid: 192
-    components:
-    - type: Transform
-      pos: -0.5,7.5
-      parent: 1
-  - uid: 226
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 0.5,1.5
-      parent: 1
-  - uid: 234
-    components:
-    - type: Transform
-      pos: 3.5,1.5
-      parent: 1
-  - uid: 241
-    components:
-    - type: Transform
-      pos: 1.5,3.5
-      parent: 1
-  - uid: 277
-    components:
-    - type: Transform
-      pos: 2.5,-0.5
-      parent: 1
-  - uid: 294
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 3.5,-3.5
-      parent: 1
-  - uid: 295
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -0.5,-6.5
-      parent: 1
-  - uid: 296
-    components:
-    - type: Transform
-      pos: -5.5,5.5
-      parent: 1
-  - uid: 344
-    components:
-    - type: Transform
-      pos: -0.5,0.5
-      parent: 1
-  - uid: 417
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 0.5,2.5
       parent: 1
 - proto: RandomSpawner
   entities:
@@ -4267,24 +3935,6 @@ entities:
     - type: Transform
       pos: -7.5,-5.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.1496
-        moles:
-        - 1.7459903
-        - 6.568249
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
 - proto: SuitStorageEVAPrisoner
   entities:
   - uid: 396
@@ -4292,24 +3942,6 @@ entities:
     - type: Transform
       pos: -5.5,-1.5
       parent: 1
-    - type: EntityStorage
-      air:
-        volume: 200
-        immutable: False
-        temperature: 293.1496
-        moles:
-        - 1.8856695
-        - 7.0937095
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
-        - 0
 - proto: SuitStorageMercenary
   entities:
   - uid: 483
@@ -4406,8 +4038,6 @@ entities:
     - type: Transform
       pos: -9.5,1.5
       parent: 1
-    - type: Thruster
-      originalPowerLoad: 1500
   - uid: 755
     components:
     - type: Transform
@@ -4416,7 +4046,6 @@ entities:
       parent: 1
     - type: Thruster
       enabled: False
-      originalPowerLoad: 1500
     - type: ApcPowerReceiver
       powerLoad: 1
 - proto: ToiletDirtyWater
@@ -4864,6 +4493,208 @@ entities:
       rot: 3.141592653589793 rad
       pos: -0.5,-12.5
       parent: 1
+- proto: WallRock
+  entities:
+  - uid: 10
+    components:
+    - type: Transform
+      pos: -6.5,-3.5
+      parent: 1
+  - uid: 13
+    components:
+    - type: Transform
+      pos: -3.5,-4.5
+      parent: 1
+  - uid: 14
+    components:
+    - type: Transform
+      pos: 1.5,-10.5
+      parent: 1
+  - uid: 17
+    components:
+    - type: Transform
+      pos: 3.5,-4.5
+      parent: 1
+  - uid: 23
+    components:
+    - type: Transform
+      pos: 0.5,-9.5
+      parent: 1
+  - uid: 24
+    components:
+    - type: Transform
+      pos: 1.5,-4.5
+      parent: 1
+  - uid: 26
+    components:
+    - type: Transform
+      pos: -0.5,-8.5
+      parent: 1
+  - uid: 27
+    components:
+    - type: Transform
+      pos: -1.5,5.5
+      parent: 1
+  - uid: 40
+    components:
+    - type: Transform
+      pos: -4.5,4.5
+      parent: 1
+  - uid: 43
+    components:
+    - type: Transform
+      pos: 2.5,-3.5
+      parent: 1
+  - uid: 73
+    components:
+    - type: Transform
+      pos: -1.5,-9.5
+      parent: 1
+  - uid: 79
+    components:
+    - type: Transform
+      pos: -0.5,-7.5
+      parent: 1
+  - uid: 84
+    components:
+    - type: Transform
+      pos: 1.5,-9.5
+      parent: 1
+  - uid: 86
+    components:
+    - type: Transform
+      pos: -1.5,-4.5
+      parent: 1
+  - uid: 87
+    components:
+    - type: Transform
+      pos: -9.5,-4.5
+      parent: 1
+  - uid: 88
+    components:
+    - type: Transform
+      pos: -10.5,-5.5
+      parent: 1
+  - uid: 89
+    components:
+    - type: Transform
+      pos: -3.5,-10.5
+      parent: 1
+  - uid: 90
+    components:
+    - type: Transform
+      pos: -10.5,-3.5
+      parent: 1
+  - uid: 91
+    components:
+    - type: Transform
+      pos: -10.5,-2.5
+      parent: 1
+  - uid: 106
+    components:
+    - type: Transform
+      pos: 0.5,-10.5
+      parent: 1
+  - uid: 107
+    components:
+    - type: Transform
+      pos: 1.5,-11.5
+      parent: 1
+  - uid: 108
+    components:
+    - type: Transform
+      pos: 1.5,-5.5
+      parent: 1
+  - uid: 118
+    components:
+    - type: Transform
+      pos: 1.5,9.5
+      parent: 1
+  - uid: 119
+    components:
+    - type: Transform
+      pos: 3.5,9.5
+      parent: 1
+  - uid: 122
+    components:
+    - type: Transform
+      pos: -2.5,6.5
+      parent: 1
+  - uid: 126
+    components:
+    - type: Transform
+      pos: 3.5,-0.5
+      parent: 1
+  - uid: 127
+    components:
+    - type: Transform
+      pos: 4.5,-0.5
+      parent: 1
+  - uid: 128
+    components:
+    - type: Transform
+      pos: 0.5,-4.5
+      parent: 1
+  - uid: 131
+    components:
+    - type: Transform
+      pos: -1.5,-3.5
+      parent: 1
+  - uid: 183
+    components:
+    - type: Transform
+      pos: 0.5,-3.5
+      parent: 1
+  - uid: 192
+    components:
+    - type: Transform
+      pos: -0.5,7.5
+      parent: 1
+  - uid: 226
+    components:
+    - type: Transform
+      pos: 0.5,1.5
+      parent: 1
+  - uid: 234
+    components:
+    - type: Transform
+      pos: 3.5,1.5
+      parent: 1
+  - uid: 241
+    components:
+    - type: Transform
+      pos: 1.5,3.5
+      parent: 1
+  - uid: 277
+    components:
+    - type: Transform
+      pos: 2.5,-0.5
+      parent: 1
+  - uid: 294
+    components:
+    - type: Transform
+      pos: 3.5,-3.5
+      parent: 1
+  - uid: 295
+    components:
+    - type: Transform
+      pos: -0.5,-6.5
+      parent: 1
+  - uid: 296
+    components:
+    - type: Transform
+      pos: -5.5,5.5
+      parent: 1
+  - uid: 344
+    components:
+    - type: Transform
+      pos: -0.5,0.5
+      parent: 1
+  - uid: 417
+    components:
+    - type: Transform
+      pos: 0.5,2.5
+      parent: 1
 - proto: WallSolidDiagonal
   entities:
   - uid: 895
@@ -4961,9 +4792,9 @@ entities:
       rot: 3.141592653589793 rad
       pos: -1.5,-2.5
       parent: 1
-- proto: WarpPointNFScrap
+- proto: WarpPoint
   entities:
-  - uid: 442
+  - uid: 32
     components:
     - type: Transform
       pos: 0.5,1.5
