Добавил пилоту шкафчик

--- a/Resources/Maps/Corvax/Shuttles/Civilian/Aurora.yml
+++ b/Resources/Maps/Corvax/Shuttles/Civilian/Aurora.yml
@@ -9954,6 +9954,13 @@ entities:
           showEnts: False
           occludes: True
           ent: null
+- proto: LockerPilotFilled
+  entities:
+  - uid: 1314
+    components:
+    - type: Transform
+      pos: 1.5,6.5
+      parent: 2
 - proto: LockerSalvageSpecialistFilled
   entities:
   - uid: 1136
@@ -10760,11 +10767,6 @@ entities:
       parent: 2
 - proto: Rack
   entities:
-  - uid: 1314
-    components:
-    - type: Transform
-      pos: 1.5,6.5
-      parent: 2
   - uid: 1315
     components:
     - type: Transform
