Comment on Ginormous

--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/tools.yml
@@ -124,7 +124,7 @@
     state: icon
   - type: Item
     storedRotation: -90
-    size: Ginormous
+    size: Ginormous # Frontier
   - type: Clothing
     quickEquip: false
     slots:
