--- a/Resources/Changelog/Frontier.yml
+++ b/Resources/Changelog/Frontier.yml
@@ -5111,11 +5111,11 @@ Entries:
       message: >-
         New massive dungeon asteroids were added, keep an eye out for them on
         radar and be informed about them on supply radio, be prepared for a
-        fight.
+        fight, they showup on a new event loop every 30 minutes, and last that duration.
     - type: Tweak
       message: >-
-        The cooldown on expedition FTL has been extended, you will now need to
-        wait longer to depart on another mission.
+        The cooldown on expedition FTL has been extended to 20 minutes, you will now need to
+        wait a bit longer to depart on another mission.
     - type: Remove
       message: Space dungeons (the big orange platforms) no longer spawn.
   id: 5478
