--- a/Resources/Changelog/Frontier.yml
+++ b/Resources/Changelog/Frontier.yml
@@ -3274,7 +3274,7 @@ Entries:
         when taking or leaving a ghost role.
       type: Tweak
     - message: >-
-        When entering cryo, your respawn timer is reduced (default 30 seconds). 
+        When entering cryo, your respawn timer is reduced (default 30 seconds).
         If you re-enter, you will receive a longer timer.
       type: Tweak
   id: 5242
@@ -5109,13 +5109,12 @@ Entries:
   changes:
     - type: Add
       message: >-
-        New massive dungeon asteroids were added, keep an eye out for them on
-        radar and be informed about them on supply radio, be prepared for a
-        fight.
+        Added new massive dungeon asteroids - they last 30 minutes, spawn every 35-40 minutes,
+        and are announced on Supply radio.
     - type: Tweak
       message: >-
-        The cooldown on expedition FTL has been extended, you will now need to
-        wait longer to depart on another mission.
+        The cooldown on expedition FTL has been extended to 20 minutes, you will now need to
+        wait a bit longer to depart on another mission.
     - type: Remove
       message: Space dungeons (the big orange platforms) no longer spawn.
   id: 5478
