--- a/Resources/Maps/_NF/Bluespace/cave.yml
+++ b/Resources/Maps/_NF/Bluespace/cave.yml
@@ -3124,7 +3124,7 @@ entities:
     - type: Transform
       pos: -7.5,8.5
       parent: 1
-- proto: WarpPointNFCave
+- proto: WarpPoint
   entities:
   - uid: 136
     components:
