--- a/Resources/Maps/_NF/Bluespace/mcevent.yml
+++ b/Resources/Maps/_NF/Bluespace/mcevent.yml
@@ -740,7 +740,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 2.5,2.5
       parent: 1
-- proto: WarpPointNFMcDelivery
+- proto: WarpPoint
   entities:
   - uid: 98
     components:
