--- a/Resources/Maps/_NF/DeadDrop/deaddrop.yml
+++ b/Resources/Maps/_NF/DeadDrop/deaddrop.yml
@@ -962,7 +962,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 2.5,0.5
       parent: 1
-- proto: WarpPointNFSyndicateSupplyDrop
+- proto: WarpPoint
   entities:
   - uid: 116
     components:
