--- a/Resources/Maps/_NF/Outpost/frontier.yml
+++ b/Resources/Maps/_NF/Outpost/frontier.yml
@@ -36773,7 +36773,7 @@ entities:
     - type: Transform
       pos: 46.5,16.5
       parent: 2173
-- proto: WarpPointNFFrontier
+- proto: WarpPoint
   entities:
   - uid: 5714
     components:
