--- a/Resources/Maps/_NF/POI/anomalouslab.yml
+++ b/Resources/Maps/_NF/POI/anomalouslab.yml
@@ -11482,7 +11482,7 @@ entities:
     - type: Transform
       pos: -2.5,12.5
       parent: 1
-- proto: WarpPointNFLab
+- proto: WarpPoint
   entities:
   - uid: 1481
     components:
