--- a/Resources/Maps/_NF/POI/arena.yml
+++ b/Resources/Maps/_NF/POI/arena.yml
@@ -20842,7 +20842,7 @@ entities:
           showEnts: False
           occludes: True
           ent: null
-- proto: WarpPointNFArena
+- proto: WarpPoint
   entities:
   - uid: 2346
     components:
