--- a/Resources/Maps/_NF/POI/beacon.yml
+++ b/Resources/Maps/_NF/POI/beacon.yml
@@ -8920,7 +8920,7 @@ entities:
     - type: Transform
       pos: -9.5,7.5
       parent: 1
-- proto: WarpPointNFBeacon
+- proto: WarpPoint
   entities:
   - uid: 1334
     components:
