--- a/Resources/Maps/_NF/POI/cargodepotalt.yml
+++ b/Resources/Maps/_NF/POI/cargodepotalt.yml
@@ -7402,7 +7402,7 @@ entities:
     - type: Transform
       pos: -2.5,3.5
       parent: 10
-- proto: WarpPointNFCargo
+- proto: WarpPoint
   entities:
   - uid: 292
     components:
