--- a/Resources/Maps/_NF/POI/cove.yml
+++ b/Resources/Maps/_NF/POI/cove.yml
@@ -12840,7 +12840,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: -5.5,37.5
       parent: 1
-- proto: WarpPointNFCove
+- proto: WarpPoint
   entities:
   - uid: 327
     components:
