--- a/Resources/Maps/_NF/POI/edison.yml
+++ b/Resources/Maps/_NF/POI/edison.yml
@@ -26989,7 +26989,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: -20.5,31.5
       parent: 2
-- proto: WarpPointNFEdison
+- proto: WarpPoint
   entities:
   - uid: 3925
     components:
