--- a/Resources/Maps/_NF/POI/grifty.yml
+++ b/Resources/Maps/_NF/POI/grifty.yml
@@ -6000,7 +6000,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: -0.5,-0.5
       parent: 1
-- proto: WarpPointNFGrifty
+- proto: WarpPoint
   entities:
   - uid: 742
     components:
