--- a/Resources/Maps/_NF/POI/lodge.yml
+++ b/Resources/Maps/_NF/POI/lodge.yml
@@ -18012,7 +18012,7 @@ entities:
     - type: Transform
       pos: -8.5,14.5
       parent: 1
-- proto: WarpPointNFLodge
+- proto: WarpPoint
   entities:
   - uid: 3
     components:
