--- a/Resources/Maps/_NF/POI/lpbravo.yml
+++ b/Resources/Maps/_NF/POI/lpbravo.yml
@@ -4530,7 +4530,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: -7.5,-5.5
       parent: 1
-- proto: WarpPointNFLPBravo
+- proto: WarpPoint
   entities:
   - uid: 189
     components:
