--- a/Resources/Maps/_NF/POI/mchobo.yml
+++ b/Resources/Maps/_NF/POI/mchobo.yml
@@ -6689,7 +6689,7 @@ entities:
     - type: Transform
       pos: -2.5,7.5
       parent: 1
-- proto: WarpPointNFMcHobo
+- proto: WarpPoint
   entities:
   - uid: 5
     components:
