--- a/Resources/Maps/_NF/POI/nfsd.yml
+++ b/Resources/Maps/_NF/POI/nfsd.yml
@@ -18065,7 +18065,7 @@ entities:
     - type: Transform
       pos: -6.5,17.5
       parent: 1
-- proto: WarpPointNFNfsd
+- proto: WarpPoint
   entities:
   - uid: 2222
     components:
