--- a/Resources/Maps/_NF/POI/tinnia.yml
+++ b/Resources/Maps/_NF/POI/tinnia.yml
@@ -13761,7 +13761,7 @@ entities:
     - type: Transform
       pos: 6.5,9.5
       parent: 1
-- proto: WarpPointNFTinnia
+- proto: WarpPoint
   entities:
   - uid: 2000
     components:
