--- a/Resources/Maps/_NF/POI/trade.yml
+++ b/Resources/Maps/_NF/POI/trade.yml
@@ -39682,7 +39682,7 @@ entities:
     - type: Transform
       pos: -1.5,3.5
       parent: 1
-- proto: WarpPointNFTrade
+- proto: WarpPoint
   entities:
   - uid: 2939
     components:
