--- a/Resources/Maps/_NF/Shuttles/Bus/publicts.yml
+++ b/Resources/Maps/_NF/Shuttles/Bus/publicts.yml
@@ -956,13 +956,11 @@ entities:
     - type: Transform
       pos: -2.5,2.5
       parent: 8756
-- proto: WarpPoint
+- proto: WarpPointBus
   entities:
   - uid: 15
     components:
     - type: Transform
       pos: -0.5,-1.5
       parent: 8756
-    - type: WarpPoint
-      location: Public Transport Shuttle
 ...
