--- a/Resources/Prototypes/_NF/Procedural/chromite_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/chromite_vgroid.yml
@@ -34,7 +34,7 @@
     - !type:OreDunGen
       tileMask:
       - FloorChromite
-      entity: WarpPointNFDengeonChromite
+      entity: WarpPoint
       count: 1
       minGroupSize: 1
       maxGroupSize: 1
