--- a/Resources/Prototypes/_NF/Procedural/snow_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/snow_vgroid.yml
@@ -34,7 +34,7 @@
     - !type:OreDunGen
       tileMask:
       - FloorSnow
-      entity: WarpPointNFDengeonSnow
+      entity: WarpPoint
       count: 1
       minGroupSize: 1
       maxGroupSize: 1
