--- a/Resources/Maps/_NF/POI/bahama.yml
+++ b/Resources/Maps/_NF/POI/bahama.yml
@@ -20260,7 +20260,7 @@ entities:
     - type: Transform
       pos: -7.5,2.5
       parent: 2
-- proto: WarpPointNFBahama
+- proto: WarpPoint
   entities:
   - uid: 3365
     components:
