--- a/Resources/Maps/_NF/POI/cargodepot.yml
+++ b/Resources/Maps/_NF/POI/cargodepot.yml
@@ -7345,7 +7345,7 @@ entities:
     - type: Transform
       pos: 3.5,-2.5
       parent: 10
-- proto: WarpPointNFCargo
+- proto: WarpPoint
   entities:
   - uid: 292
     components:
