--- a/Resources/Maps/_NF/POI/caseyscasino.yml
+++ b/Resources/Maps/_NF/POI/caseyscasino.yml
@@ -8253,7 +8253,7 @@ entities:
     - type: Transform
       pos: 4.5,-8.5
       parent: 2
-- proto: WarpPointNFCasino
+- proto: WarpPoint
   entities:
   - uid: 1147
     components:
