--- a/Resources/Maps/_NF/POI/courthouse.yml
+++ b/Resources/Maps/_NF/POI/courthouse.yml
@@ -11670,7 +11670,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 6.5,-13.5
       parent: 1
-- proto: WarpPointNFCourthouse
+- proto: WarpPoint
   entities:
   - uid: 1318
     components:
