--- a/Resources/Maps/_NF/POI/northpole.yml
+++ b/Resources/Maps/_NF/POI/northpole.yml
@@ -9428,7 +9428,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: 0.5,26.5
       parent: 1
-- proto: WarpPointNFPole
+- proto: WarpPoint
   entities:
   - uid: 1288
     components:
