--- a/Resources/Maps/_NF/Shuttles/Bus/publicts.yml
+++ b/Resources/Maps/_NF/Shuttles/Bus/publicts.yml
@@ -17,9 +17,7 @@ entities:
   - uid: 8756
     components:
     - type: MetaData
-      name: Public Transport Shuttle
     - type: Transform
-      parent: invalid
     - type: MapGrid
       chunks:
         -1,-1:
@@ -956,7 +954,7 @@ entities:
     - type: Transform
       pos: -2.5,2.5
       parent: 8756
-- proto: WarpPointBus
+- proto: WarpPoint
   entities:
   - uid: 15
     components:
