--- a/Resources/Maps/_NF/Outpost/frontier.yml
+++ b/Resources/Maps/_NF/Outpost/frontier.yml
@@ -37,6 +37,7 @@ entities:
     - type: MetaData
       name: Frontier Outpost
     - type: Transform
+      parent: 5691
     - type: MapGrid
       chunks:
         0,0:
