--- a/Resources/_NF/migration.yml
+++ b/Resources/_NF/migration.yml
@@ -90,3 +90,6 @@ WeaponRackPistolWallmountedSecurity: StructurePistolRackWallmountedNfsd
 
 # 2024-10-09 Frontier: Fixups
 SpawnPointDetectiveNF: NFSpawnPointDetective
+
+# 2024-11-09
+WarpPointShip: WarpPoint
