--- a/Resources/Maps/_NF/Outpost/frontier.yml
+++ b/Resources/Maps/_NF/Outpost/frontier.yml
@@ -36772,7 +36772,7 @@ entities:
     - type: Transform
       pos: 46.5,16.5
       parent: 2173
-- proto: WarpPoint
+- proto: WarpPointShip
   entities:
   - uid: 5714
     components:
