--- a/Resources/Prototypes/_NF/Procedural/cave_vgroid.yml
+++ b/Resources/Prototypes/_NF/Procedural/cave_vgroid.yml
@@ -34,7 +34,7 @@
     - !type:OreDunGen
       tileMask:
       - FloorCaveDrought
-      entity: WarpPoint
+      entity: WarpPointDungeon
       count: 1
       minGroupSize: 1
       maxGroupSize: 1
