--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/posters.yml
@@ -77,4 +77,5 @@
       - NFPosterContrabandFsbLogoDD
       - NFPosterContrabandFsbSpiritDD
       - NFPosterContrabandEmsCoordsDD
+      - NFPosterContrabandFsbCaladriusDD
     chance: 1
